recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {

	if (levels==0) {
		avance(length)
	} else {
		pentaKock(levels-1,length*0.4)
		gauche(108)
		pentaKock(levels-1,length*0.4)
		droite(360/5)
		pentaKock(levels-1,length*0.4)
		droite(360/5)
		pentaKock(levels-1,length*0.4)
		droite(360/5)
		pentaKock(levels-1,length*0.4)
		gauche(108)
		pentaKock(levels-1,length*0.4)
	}
}
